# uInterface

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  create-docu.sh  pyproject.toml  requirements.txt  run_linux.sh  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: CI.yml
docs/: index.html  search-index.js
docs/u_interface/: all.html  index.html  sidebar-items.js
gui/: home.py  main.py  mainFrame.py  main_window.py  problem.py  profile.py  setting.py  setup.py
gui/resources/: config.conf
src/: lib.rs
