[package]
name = "uInterface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uInterface"
crate-type = ["cdylib"]

[dependencies]
cpython = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
exitfailure = "0.5.1"
structopt = "0.3.21"
actix-rt = "*"